GitHub Adapter Implementation

--- a/.env.example
+++ b/.env.example
@@ -15,12 +15,17 @@ CLAUDE_CODE_OAUTH_TOKEN=sk-ant-oat01-...
 
 # GitHub Token (for GitHub CLI and commands)
 GH_TOKEN=ghp_...
+GITHUB_TOKEN=ghp_...  # Same as GH_TOKEN, used by adapter
+
+# GitHub Webhooks
+WEBHOOK_SECRET=your_random_secret_string
 
 # Platforms
 TELEGRAM_BOT_TOKEN=<from @BotFather>
 
 # Platform Streaming Mode (stream | batch)
 TELEGRAM_STREAMING_MODE=stream  # stream (default) | batch
+GITHUB_STREAMING_MODE=batch     # batch (default) | stream
 
 # Optional
 WORKSPACE_PATH=./workspace  # Host path for Docker volume mount (default: ./workspace)
