--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "license": "MIT",
   "dependencies": {
     "@anthropic-ai/claude-agent-sdk": "^0.1.30",
+    "@octokit/rest": "^22.0.0",
     "dotenv": "^16.4.0",
     "express": "^4.18.0",
     "pg": "^8.11.0",
