--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,6 @@ GITHUB_STREAMING_MODE=batch     # batch (default) | stream
 # Optional
 WORKSPACE_PATH=./workspace  # Host path for Docker volume mount (default: ./workspace)
 PORT=3000
+
+# Concurrency
+MAX_CONCURRENT_CONVERSATIONS=10  # Maximum concurrent AI conversations (default: 10)
