--- a/.env.example
+++ b/.env.example
@@ -7,11 +7,18 @@ CLAUDE_CODE_OAUTH_TOKEN=sk-ant-oat01-...
 # OR
 # CLAUDE_API_KEY=sk-ant-...
 
-# Codex (for future use)
-# CODEX_ID_TOKEN=eyJ...
-# CODEX_ACCESS_TOKEN=eyJ...
-# CODEX_REFRESH_TOKEN=rt_...
-# CODEX_ACCOUNT_ID=...
+# Codex Authentication (get from ~/.codex/auth.json after running 'codex login')
+# Required if using Codex as AI assistant
+# On Linux/Mac: cat ~/.codex/auth.json
+# On Windows: type %USERPROFILE%\.codex\auth.json
+CODEX_ID_TOKEN=eyJ...
+CODEX_ACCESS_TOKEN=eyJ...
+CODEX_REFRESH_TOKEN=rt_...
+CODEX_ACCOUNT_ID=6a6a7ba6-...
+
+# Default AI Assistant (claude | codex)
+# Used for new conversations when no codebase specified
+DEFAULT_AI_ASSISTANT=claude
 
 # GitHub Token (for GitHub CLI and commands)
 GH_TOKEN=ghp_...
