--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
+    "setup-auth": "node dist/scripts/setup-auth.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "type-check": "tsc --noEmit",
@@ -29,6 +30,7 @@
   "dependencies": {
     "@anthropic-ai/claude-agent-sdk": "^0.1.30",
     "@octokit/rest": "^22.0.0",
+    "@openai/codex-sdk": "^0.57.0",
     "dotenv": "^16.4.0",
     "express": "^4.18.0",
     "pg": "^8.11.0",
