Add /plan, /implement, and /prd slash commands
- /plan: Deep implementation planning with external research and validation strategy
- /implement: Autonomous execution of plans, adapts and completes end-to-end
- /prd: Lean, problem-first product requirements document

Also updated .gitignore for PRPs folder

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ api_sessions/
 
 # RCA reports (generated, local only)
 .agents/rca-reports/
+.claude/PRPs/features
 
 # Local workspace
 workspace/
