--- a/package.json
+++ b/package.json
@@ -30,29 +30,29 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@anthropic-ai/claude-agent-sdk": "^0.1.30",
+    "@anthropic-ai/claude-agent-sdk": "^0.1.55",
     "@octokit/rest": "^22.0.0",
-    "@openai/codex-sdk": "^0.57.0",
-    "dotenv": "^16.4.0",
-    "express": "^4.18.0",
+    "@openai/codex-sdk": "^0.63.0",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
     "pg": "^8.11.0",
     "telegraf": "^4.16.0",
     "telegramify-markdown": "^1.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
-    "@types/express": "^4.17.0",
+    "@types/express": "^5.0.5",
     "@types/jest": "^29.5.0",
-    "@types/node": "^20.0.0",
+    "@types/node": "^22.0.0",
     "@types/pg": "^8.11.0",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "10.1.8",
     "jest": "^29.7.0",
-    "prettier": "3.6.2",
+    "prettier": "^3.7.3",
     "ts-jest": "^29.1.0",
-    "tsx": "^4.7.0",
+    "tsx": "^4.21.0",
     "typescript": "^5.3.0",
-    "typescript-eslint": "^8.46.4"
+    "typescript-eslint": "^8.48.0"
   },
   "engines": {
     "node": ">=20.0.0"
