Fix WORKSPACE_PATH for Docker containers
Override host-side WORKSPACE_PATH with /workspace inside containers.
The .env value (e.g., ./workspace) is for volume mounting, but container
code needs the mount point path (/workspace).

Fixes /repos and other workspace commands failing in Docker.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,9 @@ services:
     profiles: ["external-db"]
     build: .
     env_file: .env
+    environment:
+      # Override WORKSPACE_PATH for container (host path differs from container path)
+      WORKSPACE_PATH: /workspace
     ports:
       - "${PORT:-3000}:${PORT:-3000}"
     volumes:
@@ -25,6 +28,8 @@ services:
     environment:
       # Override DATABASE_URL to use Docker service name
       DATABASE_URL: postgresql://postgres:postgres@postgres:5432/remote_coding_agent
+      # Override WORKSPACE_PATH for container (host path differs from container path)
+      WORKSPACE_PATH: /workspace
     ports:
       - "${PORT:-3000}:${PORT:-3000}"
     volumes:
