--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,10 @@ services:
       - "${PORT:-3000}:${PORT:-3000}"
     volumes:
       - /home/samuel/.archon/workspaces:/workspace
+      # Production directories for docker-deploy command
+      - /home/samuel/po:/home/samuel/po
+      - /home/samuel/odin-health:/home/samuel/odin-health
+      - /home/samuel/scar:/home/samuel/scar
     restart: unless-stopped
     dns:
       - 8.8.8.8
@@ -43,6 +47,12 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       # Persistent Playwright browser storage
       - /home/samuel/dockerMCP/playwright-browsers:/home/appuser/.cache/ms-playwright
+      # Production directories for docker-deploy command
+      - /home/samuel/po:/home/samuel/po
+      - /home/samuel/odin-health:/home/samuel/odin-health
+      - /home/samuel/scar:/home/samuel/scar
+    group_add:
+      - "108"  # Host docker group GID
     restart: unless-stopped
     dns:
       - 8.8.8.8
